fetching blog post

--- a/content/first-post.mdx
+++ b/content/first-post.mdx
@@ -1,5 +1,8 @@
-# It's my first blog post.
+---
+title: 'Hello world'
+date: '2019-2-19'
+desctiption: 'Testing MDX '
+---
 
-## Some title
 
-Some text.
+Hello world
