--- a/content/first-post.mdx
+++ b/content/first-post.mdx
@@ -6,3 +6,26 @@ desctiption: 'Testing MDX '
 
 
 Hello world
+
+```tsx
+// page.tsx
+export default function Page() {
+  return <>Your content here</>
+}
+```
+
+In my case, the three pages we're making all look the same minus their content, so they seem like a strong candidate for sharing a layout.
+
+A Layout will look something like this:
+
+```tsx
+// layout.tsx
+export default function Layout({ children }: PropsWithChildren) {
+  return (
+    <>
+      // Your layout content here
+      {children}
+      // Or here
+    </>
+  )
+}
